# rs-bench

./: Cargo.toml  DIRTREE.txt  README.md  docker-compose.bench.release.yml  docker-compose.bench.yml  docker-compose.yml  rust-toolchain.toml
apps/bmgen/: Cargo.toml
apps/bmgen/src/: main.rs
apps/bmreport/: Cargo.toml
apps/bmreport/src/: main.rs
apps/bmrun/: Cargo.toml
apps/bmrun/src/: main.rs
configs/datasets/: clickstream_small.toml
configs/engines/: clickhouse.toml  spark.toml
configs/runs/: clickhouse_parquet_smoke.toml  clickhouse_smoke.toml  comparison_smoke.toml  datafusion_csv_smoke.toml  datafusion_parquet_smoke.toml  duckdb_parquet_smoke.toml  duckdb_smoke.toml  polars_csv_smoke.toml  polars_parquet_smoke.toml  spark_csv_smoke.toml  spark_parquet_smoke.toml
crates/bm-core/: Cargo.toml
crates/bm-engine/: Cargo.toml
crates/bm-engine/src/: adapter.rs  error.rs  lib.rs  request.rs  response.rs
crates/bm-engine/tests/: mock_adapter.rs
crates/bm-generator/: Cargo.toml
crates/bm-generator/src/: config.rs  lib.rs  manifest.rs  materialize.rs  writer_csv.rs  writer_jsonl.rs  writer_parquet.rs
crates/bm-generator/src/families/: clickstream.rs  mod.rs
crates/bm-generator/tests/: clickstream_generate.rs
crates/bm-report/: Cargo.toml
crates/bm-report/src/: lib.rs
crates/bm-report/tests/: summarize.rs
crates/bm-runner/: Cargo.toml
crates/bm-runner/src/: lib.rs
crates/bm-schema/: Cargo.toml
crates/bm-schema/src/: dataset.rs  lib.rs  ranking.rs  raw_result.rs  run.rs  summary.rs  workload.rs
docker/: bench.Dockerfile  bench.release.Dockerfile
docs/phases/: PHASE_0_FOUNDATION.md  PHASE_1_GENERATOR.md  PHASE_2_RUNNER.md
engines/clickhouse/: Cargo.toml
engines/clickhouse/src/: lib.rs
engines/datafusion/: Cargo.toml
engines/datafusion/src/: lib.rs
engines/duckdb/: Cargo.toml
engines/duckdb/src/: lib.rs
engines/polars/: Cargo.toml
engines/polars/src/: lib.rs
engines/spark/: Cargo.toml
engines/spark/src/: lib.rs
scripts/dev/: run_compare_all.sh  run_compare_all_containerized.sh  run_compare_csv.sh  run_compare_parquet.sh
scripts/release/: run_compare_csv.sh  run_compare_parquet.sh
workloads/clickstream/: q01_session_filter.sql  q02_events_by_device.sql  q03_revenue_by_event_type.sql  q04_funnel_agg.sql  q05_sessionized_topn.sql  q06_country_referrer_rank.sql  q07_session_funnel_reduce.sql  workload.yaml
