[package]
name = "bm-generator"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bm-core = { path = "../bm-core" }
bm-schema = { path = "../bm-schema" }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
sha2.workspace = true
rand = "0.8"
csv = "1"
toml.workspace = true
anyhow.workspace = true
arrow-array = "53"
arrow-schema = "53"
parquet = "53"