[package]
name = "bm-runner"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bm-core = { path = "../bm-core" }
bm-schema = { path = "../bm-schema" }
bm-engine = { path = "../bm-engine" }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
toml.workspace = true
anyhow.workspace = true
uuid.workspace = true
csv = "1"
serde_yaml = "0.9"